# gradescope-api

./: .pre-commit-config.yaml  LICENSE.md  README.md  justfile  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: main.yaml
docs/: CONTRIBUTING.md  INSTALL.md  TESTING.md
src/gradescopeapi/: __init__.py
src/gradescopeapi/_classes/: _account.py  _assignment_helpers.py  _assignments.py  _connection.py  _course_helpers.py  _extensions.py  _member.py  _scrape_helpers.py
src/gradescopeapi/_config/: config.py
src/gradescopeapi/api/: api.py  constants.py
src/gradescopeapi/classes/: account.py  assignments.py  connection.py  courses.py  extensions.py  member.py  upload.py
src/gradescopeapi/classes/_helpers/: _assignment_helpers.py  _course_helpers.py  _login_helpers.py
src/sylveon/: __main__.py
src/sylveon/_classes/: _account.py  _assignments.py  _connection.py  _courses.py  _extensions.py  _login_helpers.py  _scrape_helpers.py  _upload.py
src/sylveon/_config/: config.py
src/sylveon/api/: api.py
tests/: conftest.py  test_api.py  test_connection.py  test_courses.py  test_edit_assignment.py  test_extension.py  test_graders.py  test_submission.py  test_upload.py
tests/integration/: test_integration.py
tests/upload_files/: markdown_file.md  python_file.py
